[package]
name = "websocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite =  { version = "0.21.0", features = ["native-tls"] }
serde_json = "1.0"
log = "0.4"
chrono = "0.4"
env_logger = "0.11.3"
futures-util = "0.3"